# agent-desk

./: .env.example  .gitignore  CLAUDE.md  DECISIONS.md  DEPLOY.md  Dockerfile  Makefile  README.md  SLACK_SETUP.md  alembic.ini  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  nightly.yml
.streamlit/: config.toml
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  context.py  fulfillment.py  guardrails.py  incident.py  knowledge.py  router.py
app/api/: __init__.py  routes_approvals.py  routes_articles.py  routes_chat.py  routes_health.py  routes_records.py
app/cache/: __init__.py  embedding_cache.py  redis_client.py  response_cache.py  semantic_cache.py  stats.py
app/db/: __init__.py  database.py  models.py
app/db/migrations/: env.py
app/db/migrations/versions/: 0001_initial_schema.py  0002_agent_sessions.py  0003_cmdb_graph.py  0004_record_numbers.py
app/memory/: __init__.py  extraction.py  session_store.py  user_facts.py
app/observability/: __init__.py  costs.py  tracing.py
app/rag/: __init__.py  chunking.py  embeddings.py  hybrid_search.py  ingest.py
app/slack/: __init__.py  runner.py
app/tools/: __init__.py  catalog_tools.py  graph_tools.py  knowledge_tools.py  slack_tools.py  ticket_tools.py  user_tools.py
data/: article_chunks.json  assets.json  catalog_items.json  cis.json  dependencies.json  knowledge_articles.json  negative_space.json  orders.json  positive_space.json  taxonomy.json  ticket_comments.json  tickets.json  user_facts.json  users.json
design/: DATA.md  DATA_DICTIONARY.md  README_FINAL.md  agent_handoff_workflow.html  cmdb_dependency_graph.html  database_erd.html  itsm_ai_system_architecture.html
evals/: __init__.py  common.py  judge_prompt.md  langfuse_datasets.py  metrics.py  run_evals.py  suite_dedup.py  suite_e2e.py  suite_graph.py  suite_quality.py  suite_slack.py  thresholds.toml
evals/datasets/: dedup.jsonl  e2e.jsonl  graph.jsonl  quality.jsonl  retrieval.jsonl  routing.jsonl  slack.jsonl
evals/results/: baseline.json
graph/: __init__.py  neo4j_graph.py  postgres_graph.py  sync_neo4j.py
ignore/: .gitignore
mcp_server/: server.py
scripts/: ab_caching_report.py  export_metrics.py  generate_data.py  seed_db.py
tests/: conftest.py  test_agents.py  test_cache.py  test_chunking.py  test_graph_tools.py  test_guardrails.py  test_mcp.py  test_memory.py  test_observability.py  test_retrieval.py  test_slack.py  test_streaming.py  test_tools.py
ui/: approval_view.py  streamlit_app.py  theme.py
