[project]
name = "agentdesk"
version = "0.1.0"
description = "AI-powered ITSM service desk: router + specialist agents with hybrid RAG, semantic caching, and HITL approvals"
requires-python = ">=3.12"
dependencies = [
    "openai-agents[litellm]",
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pgvector",
    "redis",
    "langfuse",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
