[project]
name = "agentdesk"
version = "0.1.0"
description = "AI-powered ITSM service desk: router + specialist agents with hybrid RAG, semantic caching, and HITL approvals"
requires-python = ">=3.12"
dependencies = [
    # Bounded after the 2026-07-09 nightly crash: unpinned resolution installed
    # openai-agents 0.18.0 alongside openai 2.45.0, whose InputTokensDetails grew a required
    # cache_write_tokens field the SDK didn't set — every eval run died at import time.
    # 0.18.2 fixed it (proven green in the 2026-07-10/11 nightlies). Floors admit only
    # combinations a nightly has actually passed; caps stop surprise majors/minors from
    # landing in CI before they're deliberately adopted here.
    "openai-agents[litellm]>=0.18.2,<0.19",
    "openai>=2.45,<3",
    "fastapi",
    "uvicorn[standard]",
    "streamlit",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "psycopg[binary]",
    "pgvector",
    "redis",
    "langfuse",
    "neo4j",  # M9 Phase 2: driver only — the server is an optional compose service (ADR-037)
    "mcp",  # M8: official MCP Python SDK (already a transitive dep of openai-agents; pinned as direct)
    "slack-sdk",  # M8: Socket Mode runner + WebClient (post_slack_message)
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# graph/ (M9) is imported by app.tools.graph_tools, so it MUST ship in the wheel — its
# absence broke the Docker image (found in the M8 deploy-readiness pass: local runs use the
# editable venv install and never noticed). mcp_server/ ships so the optional MCP service
# can run from the same image (DEPLOY.md).
packages = ["app", "graph", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
